--- a/config.org
+++ b/config.org
@@ -60,6 +60,7 @@
         - [[#spell][spell]]
         - [[#grammar][grammar]]
       - [[#tools][:tools]]
+        - [[#lookup][lookup]]
       - [[#os][:os]]
         - [[#tty][tty]]
       - [[#lang][:lang]]
@@ -956,17 +957,37 @@ My english is not the best, neither is my spanish or my 日本語 for that matte
 #+end_src
 
 **** TODO :tools
+
 #+begin_src elisp :tangle init.el
        :tools
        ;;ansible
        ;;debugger          ; FIXME stepping through code, to help you add bugs
        ;;direnv
        (docker +lsp)
-       ;;editorconfig      ; let someone else argue about tabs vs spaces
+       editorconfig        ; let someone else argue about tabs vs spaces
        ;;ein               ; tame Jupyter notebooks with emacs
        (eval +overlay)     ; run code, run (also, repls)
        ;;gist              ; interacting with github gists
-       lookup              ; navigate your code and its documentation
+
+#+end_src
+
+***** TODO lookup
+
+#+begin_quote
+This module adds code navigation and documentation lookup tools to help you
+quickly look up definitions, references, documentation, dictionary definitions
+or synonyms.
+
++ Jump-to-definition and find-references implementations that just work.
++ Powerful xref integration for languages that support it.
++ Search online providers like devdocs.io, stackoverflow, google, duckduckgo or
+  youtube (duckduckgo and google have live suggestions).
++ Integration with Dash.app docsets.
++ Support for online (and offline) dictionaries and thesauruses.
+#+end_quote
+
+#+begin_src elisp :tangle init.el
+       (lookup +docsets +dictionary +offline)              ; navigate your code and its documentation
        (lsp +peek)
        magit             ; a git porcelain for Emacs
        ;;make              ; run make tasks from Emacs
