--- a/todo.org
+++ b/todo.org
@@ -6,6 +6,9 @@
 + https://www.reddit.com/r/emacs/comments/9lv1fd/a_simple_guide_to_writing_publishing_emacs/
 
 * Inbox
+** TODO [#A] Divide my org-agenda in multiple files within a 'agenda' directory.
+** TODO [#A] Try out org-super-agenda, after customizing org module.
+** TODO Make =brave= the default browser.
 ** TODO [0/4] Lots to document:
 
 - [ ] Keybindings
@@ -110,5 +113,4 @@ Inside @nvm.el
 ** TODO [[https://bunpro.jp/api#getting-started][Look into the bunpro API]], excuse to use the 'rest' module.
 ** TODO [#B] Add org-super-agenda and better divide my tasks headings..
 ** HOLD Create a eshell/alias with nvm-exec https://jloubert.com/blog/eshell-nvm/
-** TODO Deprecated ~nvm~ since I don't really use it anymore.
 ** TODO https://github.com/tecosaur/screenshot
